--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -7,9 +7,18 @@
 .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .backToHome {
   margin: 3rem 0 0;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.footer > * {
+  margin-right: 40px;
 }
