--- a/styles/global.css
+++ b/styles/global.css
@@ -2,10 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  color: #111;
 }
 
 * {
@@ -13,15 +14,20 @@ body {
 }
 
 a {
-  color: #0070f3;
-  text-decoration: none;
+  color: #111;
 }
 
 a:hover {
-  text-decoration: underline;
+  color: #777;
 }
 
 img {
   max-width: 100%;
   display: block;
+}
+
+hr {
+  background: #111;
+  height: 1.5px;
+  border: 0px;
 }
