--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,3 +1,11 @@
+.headingTitle {
+  font-size: 4rem;
+  line-height: 1.2;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
+
 .heading2Xl {
   font-size: 2.5rem;
   line-height: 1.2;
@@ -49,4 +57,15 @@
 
 .lightText {
   color: #666;
+}
+
+.linkHighlight {
+  color: #111;
+  text-decoration: underline;
+  background-color: #EBFF6D;
+}
+
+.linkHighlight:hover {
+  color: #111;
+  background-color: #D4F600;
 }
